[gd_scene load_steps=8 format=3 uid="uid://cvio5f8sadcl8"]

[ext_resource type="Script" path="res://MainGame/game.gd" id="1_iteqa"]
[ext_resource type="PackedScene" uid="uid://cdu6hjoweee6s" path="res://Level/PlayGround/PlayGround.tscn" id="1_maytk"]
[ext_resource type="PackedScene" uid="uid://cnhbrpo4htp2y" path="res://MainMenu/MainMenu.tscn" id="2_id0vo"]
[ext_resource type="PackedScene" uid="uid://kqtm00s5xgeb" path="res://Shop/Shop.tscn" id="3_eirnv"]
[ext_resource type="PackedScene" uid="uid://cmdeim0mrcv32" path="res://Shop/BowsShop/BowsShop.tscn" id="5_bk4eh"]
[ext_resource type="PackedScene" uid="uid://boqh5qxj8h80x" path="res://Shop/AbilitiesShop/AbilitiesShop.tscn" id="6_onhyr"]
[ext_resource type="PackedScene" uid="uid://clubhhuu1gip3" path="res://Shop/PlatformShop/PlatformShop.tscn" id="7_8hn01"]

[node name="Game" type="Node2D"]
script = ExtResource("1_iteqa")

[node name="MainMenu" parent="." instance=ExtResource("2_id0vo")]

[node name="PlayGround" parent="." instance=ExtResource("1_maytk")]

[node name="Shop" parent="." instance=ExtResource("3_eirnv")]

[node name="BowsShop" parent="." instance=ExtResource("5_bk4eh")]

[node name="AbilitiesShop" parent="." instance=ExtResource("6_onhyr")]

[node name="PlatformShop" parent="." instance=ExtResource("7_8hn01")]

[node name="GameMusic" type="AudioStreamPlayer2D" parent="."]
